<resources>
    <string name="app_name">Nykaa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_there">Hello there!</string>
    <string name="soubia">Soubia</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="style_files">Style Files</string>
    <string name="chat_with_us">Chat with Us</string>
    <string name="others">Others</string>
    <string name="country_amp_currency"><![CDATA[Country & Currency :]]></string>
    <string name="india_inr">India | INR</string>
    <string name="help_center">Help Center</string>
    <string name="responsible_disclosure">Responsible Disclosure</string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="fashion">FASHION</string>
    <string name="search_faqs">Search FAQs</string>
    <string name="help_categories">Help Categories</string>
    <string name="order">Order /n Related</string>
    <string name="pinkville_jaipur">PINKVILLE JAIPUR</string>
    <string name="description_details">Description This wine off- shoulder set by pinkville jaipur is crafted in rayon with high-low box pleated kurta with gotta detailing featuring sharara flared with gotta bootas. Style this outfit with beautiful jewellery and hand cuffs. Due to the handmade nature of our products there can be variations in colours.</string>
    <string name="policy">This product is eligible for returns. Please initiate return from the \'My Orders\' section in the App within 7 days of delivery. Please ensure the product is in its original condition with all tags attached.</string>


</resources>