<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ProductRecyclerVIew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--        <ImageView-->
            <!--            android:layout_width="@dimen/dp_200"-->
            <!--            android:src="@drawable/product1"-->
            <!--            android:layout_height="@dimen/dp_200"/>-->
        </androidx.recyclerview.widget.RecyclerView>

        <com.kingfisher.easyviewindicator.RecyclerViewIndicator
            android:id="@+id/recyclerViewIndicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:avi_animation_enable="true"
            app:avi_drawable="@drawable/ic_circleblack"
            app:avi_drawable_unselected="@drawable/ic_circle"
            app:avi_height="5dp"
            app:avi_margin="5dp"
            app:avi_width="5dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        </com.kingfisher.easyviewindicator.RecyclerViewIndicator>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_20">

            <TextView
                android:id="@+id/tvBestSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanspro"
                android:text="BESTSELLER"
                android:textColor="#E74C3C"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tvJaipur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestSeller"
                android:layout_marginTop="@dimen/dp_7"
                android:text="@string/pinkville_jaipur"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25" />

            <TextView
                android:id="@+id/tvSharara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvJaipur"
                android:layout_marginTop="@dimen/dp_10"
                android:text="Pink Gota Work Festive Kurta with Sharara (Set of 2)"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSharara"
                android:layout_marginTop="@dimen/dp_20"
                android:text="₹3,780"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSharara"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_toRightOf="@id/tvPrice"
                android:text="10% Off"
                android:textColor="#239B56"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/tvInclusiveOfTaxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPrice"
                android:layout_marginTop="@dimen/dp_20"
                android:text="MRP ₹4,199 Inclusive of all taxes"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvInclusiveOfTaxes"
                android:layout_marginTop="@dimen/dp_15"
                android:text="Usually delivered in 8 days."
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/tvProductInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDelivery"
                android:layout_marginTop="@dimen/dp_30"
                android:fontFamily="@font/sanspro"
                android:text="Product Information"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvProductInfo"
                android:layout_marginTop="@dimen/dp_15"
                android:text="Description"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDescription"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/description_details"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tvCareInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDetails"
                android:fontFamily="@font/sanspro"
                android:text="Care Instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvDryClean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCareInstructions"
                android:layout_marginTop="@dimen/dp_6"
                android:text="Dry clean only"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tvPack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDryClean"
                android:layout_marginTop="@dimen/dp_15"
                android:fontFamily="@font/sanspro"
                android:text="Pack Contains"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPack"
                android:layout_marginTop="@dimen/dp_10"
                android:text="1 Kurta And 1 Sharara"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tvSoldBY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvItems"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="Sold By"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvDesigner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSoldBY"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="Pinkville Lifestyle \n Designs Llp"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDesigner"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="Name Of Manufacturer/ Packer/ Importer"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvManuJaipur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvManufacturer"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="Pinkville Jaipur"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvShippingPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvManuJaipur"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="Shipping &amp; Return Policy"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tvPolicyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvShippingPolicy"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/sanspro"
                android:text="@string/policy"
                android:textSize="@dimen/sp_20" />

           <View
               android:layout_width="match_parent"
               android:layout_below="@+id/tvPolicyDetails"
               android:background="@color/black"
               android:layout_height="wrap_content"/>


        </RelativeLayout>


    </LinearLayout>


</ScrollView>



