<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HelpCenterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/ibBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/Nykaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/ibBackArrow"
            app:drawableStartCompat="@drawable/ic_nykaafont"
            app:layout_constraintStart_toEndOf="@+id/ibBackArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Nykaa"
            android:layout_marginStart="48dp"
            android:layout_toEndOf="@id/ibBackArrow"
            android:text="@string/fashion"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/ibBackArrow"
            app:layout_constraintTop_toBottomOf="@+id/Nykaa" />

        <ImageView
            android:id="@+id/ivBlackBox"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/rectangle_bg"
            app:layout_constraintTop_toBottomOf="@id/tvFashion" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/searchbar_rectangle_bg"
            android:hint="@string/search_faqs"
            android:padding="@dimen/dp_5"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBlackBox"
            app:layout_constraintTop_toTopOf="@+id/ivBlackBox"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/sanspro"
            android:gravity="center"
            android:text="@string/help_categories"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@id/ivBlackBox" />

        <ImageView
            android:id="@+id/ivCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cart64"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toStartOf="@+id/ivBag"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategories" />

        <TextView
            android:id="@+id/tvOrder"
            style="@style/TextViewOfCategories"
            android:text="Order \n Related"
            android:textSize="15dp"
            android:fontFamily="@font/sanspro"
            app:layout_constraintEnd_toEndOf="@+id/ivCart"
            app:layout_constraintStart_toStartOf="@+id/ivCart"
            app:layout_constraintTop_toBottomOf="@id/ivCart" />

        <ImageView
            android:id="@+id/ivBag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/ivReturn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivCart"
            app:layout_constraintTop_toTopOf="@+id/ivCart"
            app:srcCompat="@drawable/bag64" />

        <TextView
            android:id="@+id/tvBag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Shopping"
            app:layout_constraintEnd_toEndOf="@+id/ivBag"
            app:layout_constraintStart_toStartOf="@+id/ivBag"
            app:layout_constraintTop_toBottomOf="@+id/ivBag" />

        <ImageView
            android:id="@+id/ivReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivBag"
            app:layout_constraintTop_toTopOf="@+id/ivBag"
            app:srcCompat="@drawable/return64" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="Returns \n and \n Cancellations"
            app:layout_constraintEnd_toEndOf="@+id/ivReturn"
            app:layout_constraintStart_toStartOf="@+id/ivReturn"
            app:layout_constraintTop_toBottomOf="@+id/ivReturn" />

        <ImageView
            android:id="@+id/ivVan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:src="@drawable/vanvan64"
            app:layout_constraintEnd_toEndOf="@+id/ivCart"
            app:layout_constraintLeft_toLeftOf="@+id/ivCart"
            app:layout_constraintTop_toBottomOf="@+id/tvOrder" />

        <TextView
            android:id="@+id/tvShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Shipping \n and \n Returns \n policy"
            app:layout_constraintStart_toStartOf="@+id/ivVan"
            app:layout_constraintTop_toBottomOf="@id/ivVan" />

        <ImageView
            android:id="@+id/ivCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ivBag"
            app:layout_constraintStart_toStartOf="@+id/ivBag"
            app:layout_constraintTop_toTopOf="@+id/ivVan"
            app:srcCompat="@drawable/card64" />

        <TextView
            android:id="@+id/tvPayments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payments"
            app:layout_constraintEnd_toEndOf="@+id/ivCard"
            app:layout_constraintStart_toStartOf="@+id/ivCard"
            app:layout_constraintTop_toTopOf="@+id/tvShipping" />

        <ImageView
            android:id="@+id/ivPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/ivReturn"
            app:layout_constraintStart_toStartOf="@+id/ivReturn"
            app:layout_constraintTop_toTopOf="@+id/ivCard"
            app:srcCompat="@drawable/user64" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Account \n Related"
            app:layout_constraintEnd_toEndOf="@+id/ivPerson"
            app:layout_constraintStart_toStartOf="@+id/ivPerson"
            app:layout_constraintTop_toTopOf="@+id/tvPayments" />

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info64"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toStartOf="@+id/ivWrite"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShipping" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="Others"
            app:layout_constraintStart_toStartOf="@id/ivInfo"
            app:layout_constraintTop_toBottomOf="@+id/ivInfo" />

        <ImageView
            android:id="@+id/ivWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivInfo"
            app:layout_constraintTop_toTopOf="@+id/ivInfo"
            app:srcCompat="@drawable/write64" />

        <TextView
            android:id="@+id/tvWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Write  to \n us"
            app:layout_constraintEnd_toEndOf="@+id/ivWrite"
            app:layout_constraintStart_toStartOf="@+id/ivWrite"
            app:layout_constraintTop_toBottomOf="@+id/ivWrite" />

        <View
            android:id="@+id/View"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/dp_60"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvWrite" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:gravity="center"
            android:text="Email : support@nykaafashion.com"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            app:layout_constraintTop_toBottomOf="@+id/View" />

        <View
            android:id="@+id/ViewLine2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/dp_60"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text="2019 Nykaa Fashion Pvt.Ltd.All Rights Reserved"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ViewLine2" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>